# weave

./: .gitignore  CLAUDE.md  USER_GUIDE.md  pyproject.toml  pyrightconfig.json
.harness/: config.json  manifest.json
.harness/context/: brief.md  conventions.md  spec.md
.harness/integrations/: detected.json
.harness/providers/: claude-code.sh  codex.sh  gemini.sh  hermes.contract.json  hermes.sh  hermes_adapter.py  ollama.sh
.harness/skills/: browser-automation.skill.json  image-gen.skill.json  multi-step-task.skill.json  registry.json  scheduled-automation.skill.json  voice-transcription.skill.json  web-research.skill.json
audit/claude/: report.md
audit/codex/: report.md
audit/gemini/: report.md
docs/integrations/hermes/: design.md  plan.md
docs/superpowers/plans/: 2026-04-09-weave-runtime-phase1.md  (+15 more)
integrations/hermes/: agents-snippet.md
src/weave/: __init__.py  cli.py
src/weave_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_compaction.py  test_config.py  test_context.py  test_feedback.py  test_healing.py  test_hermes_adapter.py  test_hooks.py  test_integration_hermes.py  test_integrations.py  test_invoker.py  test_policy.py  test_protocol.py  test_provider_contract.py  test_providers.py  test_registry.py  test_runtime.py  test_sandbox.py  test_scaffold.py  test_schemas.py  test_security.py  test_session.py  test_session_binding.py  test_session_marker.py  test_skill_schema.py  test_skills.py  test_translate.py  test_volatile.py
workflows/integration-extension-points/: instructions.md
(+73 files in other folders)
