[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weave-harness"
version = "0.1.0"
description = "Weave — composing agents, CLIs, and workflows into fabric"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyright>=1.1"]

[project.scripts]
weave = "weave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"weave.providers.builtin" = ["*.contract.json", "*.sh"]
"weave.hooks.builtin" = ["*.sh"]
